--- a/index.html
+++ b/index.html
@@ -6,35 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
-    <script src="https://kit.fontawesome.com/00fdd12ce0.js" crossorigin="anonymous"></script>    <title>Huddle</title>
+    <script src="https://kit.fontawesome.com/00fdd12ce0.js" crossorigin="anonymous"></script>    <title>Learn to Code</title>
 </head>
 <body>
-    <nav>
-        <img src="/images/logo.svg" alt="" width="200px">
-    </nav>
     <div class="container">
+        <div class="mainleft">
+            <h1>Learn to code by watching others</h1>
+            <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
+        </div>
         <div class="main">
-            <img src="/images/illustration-mockups.svg" alt="Mockup" width="95%">
-        </div>
-        <div class="mainright">
-            <h1>Build The Community Your Fans Will Love</h1>
-            <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
-            <button>Register</button>
-        </div>
-        <footer>
-            <div class="social">
-                <div class="dot">
-                    <i class="fab fa-facebook-f"></i>
-                </div>
-                <div class="dot">
-                    <i class="fab fa-twitter"></i>
-                </div>
-                <div class="dot">
-                    <i class="fab fa-instagram"></i>
-                </div>
+            <div class="bannerrow">
+                <h2><span class="bolder">Try it free 7 days</span> then $20/mo. thereafter</h2>
             </div>
-        </footer>
+
+            <div class="form">
+                <form>
+                    <input type="text" id="fname" name="fname" placeholder="First Name"><br>
+                    <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
+                    <input type="email" id="email" name="email" placeholder="E-mail Address"><br>
+                    <input type="password" id="pwd" name="pwd" placeholder="Password"><br>
+                </form>
+                <button>CLAIM YOUR FREE TRIAL</button>
+                <h6>By clicking the button, you are agreeing to our <a href="https://www.w3schools.com"> Terms and Services</a></h6>
+            </div>
+        </div>
     </div>
 
 
